# smallcheck-series

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  LICENSE  README.md  TODO  cabal-deb.config  smallcheck-extra.cabal  smallcheck-instances.cabal  smallcheck-series.cabal  stack-7.10.yaml  stack-7.8.yaml
Test/SmallCheck/: Instances.hs
Test/SmallCheck/Series/: ByteString.hs  Instances.hs  Text.hs  Utils.hs
Test/SmallCheck/Series/ByteString/: Lazy.hs
Test/SmallCheck/Series/Instances/: Internal.hs
Test/SmallCheck/Series/Text/: Lazy.hs
scripts/: deb-deps.sh  hackage-docs.sh
tests/: Main.hs  doctests.hs
