name:                smallcheck-extra
version:             0.0.0
synopsis:            Extra utilities for smallcheck
description:
  Extra utilities for creating `Series` and orphan instances for
  frequently used types coming with GHC core libraries.
homepage:            https://github.com/jdnavarro/smallcheck-extra
bug-reports:         https://github.com/jdnavarro/smallcheck-extra/issues
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
category:            Testing
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jdnavarro/smallcheck-extra.git


library
  exposed-modules:     Test.SmallCheck.Series.ByteString
                       Test.SmallCheck.Series.ByteString.Lazy
                       Test.SmallCheck.Series.Instances
                       Test.SmallCheck.Series.Text
                       Test.SmallCheck.Series.Text.Lazy
  build-depends:       base >=4.6 && <4.9,
                       bytestring >= 0.10.0,
                       text >= 0.11.3,
                       smallcheck >= 1.1
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             doctests.hs
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.6 && <4.9,
                       Glob >= 0.7.5,
                       doctest >= 0.9.10
